<resources>
    <string name="app_name">Du Lich Viet Nam</string>
    <string name="facebook_app_id">1819407761661870</string>
    <string name="intro">Giới thiệu chung</string>
    <string name="gioi_thieu">Giới thiệu</string>
    <string name="diem_di">Điểm đi</string>
    <string name="an_uong">Ăn gì/Ở đâu</string>
    <string name="phuong_tien">Phương tiện</string>
    <string name="nha_nghi">Nhà nghỉ</string>
    <string name="lich_trinh">Lịch trình và chi phí</string>
    <string name="test">\t\tNói đến du lịch Miền Tây thì bạn không thể bỏ qua An Giang, nơi còn được biết đến với cái tên miền đất Bảy Núi (quê hương Thất Sơn). Vùng đất miền Tây quen thuộc nhưng chứa đựng nhiều điều bí ẩn. An Giang là tỉnh duy nhất thuộc đồng bằng sông Cửu Long nhưng lại có nhiều dãy núi, trong khi những tỉnh miền Tây khác không có, trong đó nổi tiếng nhất là núi Sam (có miếu Bà Chúa Xứ), núi Cấm (có tượng Phật Di Lặc lớn nhất Châu Á). An Giang lại có rừng tràm Trà Sư là nơi cư trú của chim trời; có hồ nước trời (Búng Bình Thiên) mênh mông sắc vàng bông điên điển; có kênh Vĩnh Tế nhộn nhịp thuyền chài vào mùa nước nổi. Ngoài ra An Giang cũng còn có nhiều điểm du lịch văn hóa khác như các đền thờ Hồi Giáo, các ngôi chùa mang đậm kiến trúc Khơme, và đặc biệt là lễ hội đua Bò.\n\t\tAn Giang có 2 khu đô thị lớn là Tp. Long Xuyên và thị xã Châu Đốc, từ 2 điểm này sẽ rẽ đi các điểm du lịch khác nhau. Cụ thể:

Từ Châu Đốc bạn có thể đi thăm rừng Tràm Trà Sư, thăm Núi Sam, Núi Cấm, Núi Két, các làng bè cá trên sông, Núi bà chúa Xứ, Chợ Châu Đốc. Qua Tri Tôn xem lễ hội đua bò Bảy Núi, các ngôi chùa Khơme, Núi Cô Tô, đồi Tà Pạ. Hay qua cửa khẩu Tịnh Biên, ghé qua Cam chơi.

Từ Long Xuyên bạn có thể đi: khu tưởng niệm bác Tôn, đi Thoại Sơn thăm núi Ba Thê, Núi Sập, khu du lịch hồ Ông Thoại.\n\t\tNếu muốn đến An Giang mùa nước nổi để ngắm thảm bèo cũng như thế giới tự nhiên xanh mát ở rừng tràm Trà Sư bạn nên đi vào tháng 10, 11. Vào tháng 4 hay tháng 8 âm lịch là thời gian diễn ra hai lễ hội lớn gồm hội bà Chúa Xứ núi Sam (23 – 27/4 âm lịch) và lễ hội đua bò cuối tháng 8. Các tháng 7 – 8 có mưa khá nhiều nên cần mang theo ô và trang phục phù hợp.</string>
    <string name="choose_tour">Lựa chọn chuyến đi</string>
    <string-array name="tour_type">
        <item>Đi 1 ngày</item>
        <item>Đi 2 ngày 1 đêm</item>
        <item>Đi 3 ngày 2 đêm</item>
    </string-array>
    <string name="speech_somthing">Hãy nói từ cần tìm</string>
    <string name="speech_not_supported">Xin lỗi! Thiết bị của bạn chưa hỗ trợ microphone</string>
    <string name="thoi_tiet">Thời Tiết</string>
    <string name="yeu_thich">Yêu Thích</string>
    <string name="map">Map</string>

    <string name="choose_radius">Lựa chọn bán kính</string>
    <string-array name="radius_type">
        <item>Bán kính 500M</item>
        <item>Bán kính 1KM</item>
        <item>Bán kính 3KM</item>
        <item>Bán kính 5KM</item>
    </string-array>
    <string name="wait">Vui lòng chờ...</string>
    <string name="start">BẮT ĐẦU</string>
    <string name="next">TIẾP TỤC</string>
    <string name="skip">BỎ QUA</string>

</resources>
